# simple-mt-parser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project.freeze  project_build.sh  simple-mt-parser.cabal
.github/workflows/: haskell.yml
app/: Main.hs
bench/: Bench.hs
src/: MTParser.hs
src/MTParser/: ByteStringAsSource.hs  Parser.hs  Source.hs  StringAsSource.hs  TextAsSource.hs  Tools.hs
test/: ByteChar8Test.hs  Main.hs  StringTest.hs  TextTest.hs
