cabal-version:   3.0
name:            simple-mt-parser

-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          kaymoSmyo
maintainer:
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wmissing-import-lists -Wcompat

  build-depends:
    , base        ^>=4.18.3.0
    , bytestring  >=0.11.5    && <0.12
    , mtl         >=2.3.1     && <2.4
    , text        >=2.0.2     && <2.1

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DoAndIfThenElse
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

-- AutoDeriveTypeable
-- MonadFailDesugaring
-- NoImplicitPrelude
library
  import:           warnings
  exposed-modules:
    MTParser
    MTParser.Parser
    MTParser.Source
    MTParser.Tools

  build-depends:
  hs-source-dirs:   src
  default-language: GHC2021

executable simple-mt-parser-app
  import:           warnings
  build-depends:    simple-mt-parser
  hs-source-dirs:   app
  default-language: GHC2021
  main-is:          Main.hs

test-suite simple-mt-parser-test
  import:           warnings
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs 
  other-modules:
    ByteChar8Test
    StringTest
    TextTest

  build-depends:
    , HUnit             >=1.6.2 && <1.7
    , simple-mt-parser

benchmark simple-mt-parser-bench
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Bench.hs
  hs-source-dirs:   bench
  build-depends:
    , criterion         >=1.5
    , simple-mt-parser

  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -O2
